# ai-brief-decoder-lite

./: .env.example  .gitignore  AI_USAGE.md  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202606230001_create_decode_runs.py
backend/app/: __init__.py  main.py  schemas.py
backend/app/api/: deps.py  routes.py
backend/app/core/: config.py
backend/app/db/: models.py  session.py
backend/app/domain/: __init__.py  entities.py  types.py
backend/app/providers/: __init__.py  brief_decode.py
backend/app/repositories/: __init__.py  decode_runs.py
backend/app/services/: brief_decoder.py
backend/tests/: fakes.py  test_api.py  test_provider_validation.py
extension/: package-lock.json  package.json  tsconfig.json  wxt.config.ts
extension/entrypoints/popup/: index.html  main.tsx  style.css
extension/src/api/: client.ts  types.ts
