[project]
name = "ai-brief-decoder-lite-backend"
version = "0.1.0"
description = "FastAPI backend for AI Brief Decoder Lite."
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "asyncpg>=0.29.0",
  "fastapi>=0.115.0",
  "pydantic>=2.8.2",
  "sqlalchemy[asyncio]>=2.0.32",
  "uvicorn[standard]>=0.30.6",
]

[dependency-groups]
dev = [
  "httpx>=0.27.2",
  "pyright>=1.1.378",
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
include = ["app", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = "none"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.ruff.format]
quote-style = "double"
